# leetcode

./: .clang-format  .clang-tidy  .gitignore
0002_AddTwoNumbers/: TaskDescription.txt
0002_AddTwoNumbers/cplusplus/: CMakeLists.txt  Solution.cpp  Solution.hpp  main.cpp
0003_LongestSubstring/: TaskDescription.txt
0003_LongestSubstring/cplusplus/: Solution.cpp  Solution.hpp  build.sh  main.cpp
1535_FindWinner/: TaskDescription.txt
1535_FindWinner/cplusplus/: CMakeLists.txt  Solution.cpp  Solution.hpp  build.sh  helper.cpp  helper.hpp  main.cpp
cplusplus/: CMakeLists.txt  build.sh  main.cpp
cplusplus/src/: CMakeLists.txt
cplusplus/src/common/: CMakeLists.txt
cplusplus/src/common/utils/: STDDumper.cpp  STDDumper.hpp  dumper.cpp  dumper.hpp  helper.cpp  helper.hpp
cplusplus/src/logger/: CMakeLists.txt  Debuggable.hpp  Logger.hpp
cplusplus/src/logger/private/: LogEnums.cpp  LogEnums.hpp  LogHandler.cpp  LogHandler.hpp  LogPrefix.cpp  LogPrefix.hpp  LogStream.cpp  LogStream.hpp  STDDumpers.cpp  STDDumpers.hpp
cplusplus/src/solutions/: CMakeLists.txt  ISolution.hpp  ListNode.cpp  ListNode.hpp  Solution0002.cpp  Solution0002.hpp  Solution0003.cpp  Solution0003.hpp  Solution0005.cpp  Solution0005.hpp  Solution0006.cpp  Solution0006.hpp  Solution0007.cpp  Solution0007.hpp  Solution0008.cpp  Solution0008.hpp  Solution0149.cpp  Solution0149.hpp  Solution1535.cpp  Solution1535.hpp  Solution2956.cpp  Solution2956.hpp  Solution2957.cpp  Solution2957.hpp  Solution2958.cpp  Solution2958.hpp  Solution2961.cpp  Solution2961.hpp  SolutionDefault.cpp  SolutionDefault.hpp  SolutionFactory.cpp  SolutionFactory.hpp  SpecialTask001.cpp  SpecialTask001.hpp
python/: build.sh  main.py
python/solutions/: 1535_FindWinner.py  ISolution.py  Solution0002.py  Solution0003.py  Solution0005.py  Solution0006.py  SolutionDefault.py  SolutionFactory.py
